examples/auth/envoy_config.json
{
  "admin": {},
  "layeredRuntime": {
    "layers": [
      {
        "name": "static-runtime",
        "staticLayer": {
          "envoy.reloadable_features.explicit_internal_address_config": false,
          "envoy.reloadable_features.filter_access_loggers_first": false,
          "envoy.reloadable_features.http2_use_oghttp2": false,
          "http.max_requests_per_io_cycle": 1,
          "re2.max_program_size.error_level": 1000
        }
      }
    ]
  },
  "node": {
    "cluster": "ESPv2_cluster",
    "id": "ESPv2"
  },
  "staticResources": {
    "clusters": [
      {
        "connectTimeout": "20s",
        "dnsLookupFamily": "V4_PREFERRED",
        "loadAssignment": {
          "clusterName": "127.0.0.1",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "127.0.0.1",
                        "portValue": 8082
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "backend-cluster-examples-auth.endpoints.cloudesf-testing.cloud.goog_local",
        "type": "LOGICAL_DNS"
      },
      {
        "connectTimeout": "20s",
        "loadAssignment": {
          "clusterName": "169.254.169.254",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "169.254.169.254",
                        "portValue": 80
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "metadata-cluster",
        "type": "STRICT_DNS"
      },
      {
        "connectTimeout": "5s",
        "dnsLookupFamily": "V4_ONLY",
        "loadAssignment": {
          "clusterName": "servicecontrol.googleapis.com",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "servicecontrol.googleapis.com",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "service-control-cluster",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "servicecontrol.googleapis.com"
          }
        },
        "type": "LOGICAL_DNS"
      },
      {
        "connectTimeout": "20s",
        "dnsLookupFamily": "V4_ONLY",
        "loadAssignment": {
          "clusterName": "www.googleapis.com",
          "endpoints": [
            {
              "lbEndpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socketAddress": {
                        "address": "www.googleapis.com",
                        "portValue": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "jwt-provider-cluster-www.googleapis.com:443",
        "transportSocket": {
          "name": "envoy.transport_sockets.tls",
          "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "commonTlsContext": {
              "validationContext": {
                "trustedCa": {
                  "filename": "/etc/ssl/certs/ca-certificates.crt"
                }
              }
            },
            "sni": "www.googleapis.com"
          }
        },
        "type": "LOGICAL_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socketAddress": {
            "address": "0.0.0.0",
            "portValue": 8080
          }
        },
        "filterChains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typedConfig": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "commonHttpProtocolOptions": {
                    "headersWithUnderscoresAction": "REJECT_REQUEST"
                  },
                  "http2ProtocolOptions": {
                    "initialConnectionWindowSize": 268435456,
                    "initialStreamWindowSize": 268435456,
                    "maxConcurrentStreams": 2147483647
                  },
                  "httpFilters": [
                    {
                      "name": "com.google.espv2.filters.http.header_sanitizer",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v12.http.header_sanitizer.FilterConfig"
                      }
                    },
                    {
                      "name": "envoy.filters.http.jwt_authn",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication",
                        "providers": {
                          "auth0_jwk": {
                            "audiences": [
                              "bookstore.endpoints.cloudesf-testing.cloud.goog"
                            ],
                            "forward": true,
                            "forwardPayloadHeader": "X-Endpoint-API-UserInfo",
                            "fromHeaders": [
                              {
                                "name": "Authorization",
                                "valuePrefix": "Bearer "
                              },
                              {
                                "name": "X-Goog-Iap-Jwt-Assertion"
                              }
                            ],
                            "fromParams": [
                              "access_token"
                            ],
                            "issuer": "123456789-compute@developer.gserviceaccount.com",
                            "jwtCacheConfig": {
                              "jwtCacheSize": 1000
                            },
                            "payloadInMetadata": "jwt_payloads",
                            "remoteJwks": {
                              "asyncFetch": {},
                              "cacheDuration": "300s",
                              "httpUri": {
                                "cluster": "jwt-provider-cluster-www.googleapis.com:443",
                                "timeout": "30s",
                                "uri": "https://www.googleapis.com/service_accounts/v1/jwk/123456789-compute@developer.gserviceaccount.com"
                              }
                            }
                          },
                          "firebase": {
                            "audiences": [
                              "apiproxy-231719"
                            ],
                            "forward": true,
                            "forwardPayloadHeader": "X-Endpoint-API-UserInfo",
                            "fromHeaders": [
                              {
                                "name": "Authorization",
                                "valuePrefix": "Bearer "
                              },
                              {
                                "name": "X-Goog-Iap-Jwt-Assertion"
                              }
                            ],
                            "fromParams": [
                              "access_token"
                            ],
                            "issuer": "https://securetoken.google.com/apiproxy-231719",
                            "jwtCacheConfig": {
                              "jwtCacheSize": 1000
                            },
                            "payloadInMetadata": "jwt_payloads",
                            "remoteJwks": {
                              "asyncFetch": {},
                              "cacheDuration": "300s",
                              "httpUri": {
                                "cluster": "jwt-provider-cluster-www.googleapis.com:443",
                                "timeout": "30s",
                                "uri": "https://www.googleapis.com/service_accounts/v1/jwk/securetoken@system.gserviceaccount.com"
                              }
                            }
                          },
                          "google_id_token": {
                            "audiences": [
                              "https://examples-auth.endpoints.cloudesf-testing.cloud.goog"
                            ],
                            "forward": true,
                            "forwardPayloadHeader": "X-Endpoint-API-UserInfo",
                            "fromHeaders": [
                              {
                                "name": "Authorization",
                                "valuePrefix": "Bearer "
                              },
                              {
                                "name": "X-Goog-Iap-Jwt-Assertion"
                              }
                            ],
                            "fromParams": [
                              "access_token"
                            ],
                            "issuer": "https://accounts.google.com",
                            "jwtCacheConfig": {
                              "jwtCacheSize": 1000
                            },
                            "payloadInMetadata": "jwt_payloads",
                            "remoteJwks": {
                              "asyncFetch": {},
                              "cacheDuration": "300s",
                              "httpUri": {
                                "cluster": "jwt-provider-cluster-www.googleapis.com:443",
                                "timeout": "30s",
                                "uri": "https://www.googleapis.com/oauth2/v3/certs"
                              }
                            }
                          }
                        },
                        "requirementMap": {
                          "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.CreateShelf": {
                            "providerAndAudiences": {
                              "audiences": [
                                "bookstore.endpoints.cloudesf-testing.cloud.goog"
                              ],
                              "providerName": "auth0_jwk"
                            }
                          },
                          "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.ListShelves": {
                            "requiresAny": {
                              "requirements": [
                                {
                                  "providerAndAudiences": {
                                    "audiences": [
                                      "apiproxy-231719"
                                    ],
                                    "providerName": "firebase"
                                  }
                                },
                                {
                                  "providerName": "google_id_token"
                                }
                              ]
                            }
                          }
                        }
                      }
                    },
                    {
                      "name": "com.google.espv2.filters.http.grpc_metadata_scrubber",
                      "typedConfig": {
                        "@type": "type.googleapis.com/espv2.api.envoy.v12.http.grpc_metadata_scrubber.FilterConfig"
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typedConfig": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router",
                        "suppressEnvoyHeaders": true
                      }
                    }
                  ],
                  "httpProtocolOptions": {
                    "enableTrailers": true
                  },
                  "localReplyConfig": {
                    "bodyFormat": {
                      "jsonFormat": {
                        "code": "%RESPONSE_CODE%",
                        "message": "%LOCAL_REPLY_BODY%"
                      }
                    }
                  },
                  "mergeSlashes": true,
                  "normalizePath": true,
                  "pathWithEscapedSlashesAction": "KEEP_UNCHANGED",
                  "routeConfig": {
                    "name": "local_route",
                    "virtualHosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "backend",
                        "routes": [
                          {
                            "decorator": {
                              "operation": "ingress ListShelves"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "GET"
                                  }
                                }
                              ],
                              "path": "/shelves"
                            },
                            "name": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.ListShelves",
                            "route": {
                              "cluster": "backend-cluster-examples-auth.endpoints.cloudesf-testing.cloud.goog_local",
                              "idleTimeout": "300s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "15s"
                            },
                            "typedPerFilterConfig": {
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.ListShelves"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress ListShelves"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "GET"
                                  }
                                }
                              ],
                              "path": "/shelves/"
                            },
                            "name": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.ListShelves",
                            "route": {
                              "cluster": "backend-cluster-examples-auth.endpoints.cloudesf-testing.cloud.goog_local",
                              "idleTimeout": "300s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "15s"
                            },
                            "typedPerFilterConfig": {
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.ListShelves"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress CreateShelf"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/shelves"
                            },
                            "name": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.CreateShelf",
                            "route": {
                              "cluster": "backend-cluster-examples-auth.endpoints.cloudesf-testing.cloud.goog_local",
                              "idleTimeout": "300s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "15s"
                            },
                            "typedPerFilterConfig": {
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.CreateShelf"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress CreateShelf"
                            },
                            "match": {
                              "headers": [
                                {
                                  "name": ":method",
                                  "stringMatch": {
                                    "exact": "POST"
                                  }
                                }
                              ],
                              "path": "/shelves/"
                            },
                            "name": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.CreateShelf",
                            "route": {
                              "cluster": "backend-cluster-examples-auth.endpoints.cloudesf-testing.cloud.goog_local",
                              "idleTimeout": "300s",
                              "retryPolicy": {
                                "numRetries": 1,
                                "retryOn": "reset,connect-failure,refused-stream"
                              },
                              "timeout": "15s"
                            },
                            "typedPerFilterConfig": {
                              "envoy.filters.http.jwt_authn": {
                                "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig",
                                "requirementName": "1.examples_auth_endpoints_cloudesf_testing_cloud_goog.CreateShelf"
                              }
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/shelves"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/shelves\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/shelves"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownHttpMethodForPath_/shelves"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is matched to the defined url template \"/shelves\" but its http method is not allowed"
                              },
                              "status": 405
                            },
                            "match": {
                              "path": "/shelves/"
                            }
                          },
                          {
                            "decorator": {
                              "operation": "ingress UnknownOperationName"
                            },
                            "directResponse": {
                              "body": {
                                "inlineString": "The current request is not defined by this API."
                              },
                              "status": 404
                            },
                            "match": {
                              "prefix": "/"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "statPrefix": "ingress_http",
                  "upgradeConfigs": [
                    {
                      "upgradeType": "websocket"
                    }
                  ],
                  "useRemoteAddress": false,
                  "xffNumTrustedHops": 2
                }
              }
            ]
          }
        ],
        "name": "ingress_listener"
      }
    ]
  }
}
